--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "npms-info",
-  "version": "0.9.0",
+  "version": "1.0.0",
   "description": "an API Wrapper for NPMs",
-  "type": "module",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "typings": "dist/npms-info.d.ts",
   "homepage": "https://github.com/EhsanFox/npms-info#readme",
+  "exports": {
+    "require": "./dist/index.js",
+    "import": "./dist/index.mjs"
+  },
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/EhsanFox/npms-info.git"
@@ -12,7 +19,11 @@
   "bugs": {
     "url": "https://github.com/EhsanFox/npms-info/issues"
   },
-  "scripts": {},
+  "scripts": {
+    "build": "tsc && npm run build:dts && npm run build:esm",
+    "build:dts": "api-extractor run",
+    "build:esm": "gen-esm-wrapper ./dist/index.js ./dist/index.mjs"
+  },
   "keywords": [
     "npm",
     "api",
@@ -37,5 +48,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.22.0"
+  },
+  "devDependencies": {
+    "@microsoft/api-extractor": "^7.22.2",
+    "gen-esm-wrapper": "^1.1.3",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   }
 }
